--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -17,6 +17,10 @@
 
 <body>
 
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=374963193096702&autoLogAppEvents=1" nonce="sgZovSfw"></script>
+
+
     <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
         <nav class="navbar navbar-expand-lg" style="background-color: #485e79;">
         <a class="navbar-brand" href="{% url 'homepage:home' %}"> <h1 style="font-family: comicsans; color: white;" >SHOPオンライン</h1></a>
