--- a/ecommerce/templates/product/producthome.html
+++ b/ecommerce/templates/product/producthome.html
@@ -209,10 +209,10 @@ Product-Home
                     <div class="reviewform">
                         {% csrf_token %}
                         <fieldset class="rating">
-                            <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
+                            <input type="radio" id="star5" name="rating" value="5" required="true"/><label class = "full" for="star5" title="Awesome - 5 stars"></label>
                             <input type="radio" id="star4half" name="rating" value="4.5" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
                             <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
-                            <input type="radio" id="star3half" name="rating" value="3.5" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+                            <input type="radio" id="star3half" name="rating" value="3.5" checked /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
                             <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
                             <input type="radio" id="star2half" name="rating" value="2.5" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
                             <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
@@ -264,7 +264,7 @@ Product-Home
                                 </div>
                                 <div class="col-lg-2">
                                     {% if pdtreviews.reviewed_by == request.user %}
-                                    <button style="width: 100%;" class="btn btn-outline-danger"> Delete </button>
+                                    <a href="{% url 'reviews:delete_review' pdtreviews.reviewid %}" onclick="return confirm( 'Are you sure you want to delete the review ?' ) "><button style="width: 100%;" class="btn btn-outline-danger" > Delete </button></a>
                                     {% endif %}
                                 </div>
                             </div>
