--- a/ecommerce/templates/orders/myorderdetails.html
+++ b/ecommerce/templates/orders/myorderdetails.html
@@ -159,7 +159,7 @@ Product-Home
                     <div class="row">
                         <div class="col-lg-7">
                             <h1 style=" text-align: left; margin-left: 10%; margin-top: 1%; text-transform: uppercase;">{{orderdetailspdt.product.productname}}</h1><br>
-                            <img class="product-display" src="{{ orderdetailspdt.product.picture.url }}" alt="error" style="width:70%; margin: 0% 0% 0% 10%;">
+                            <a href="{% url 'products:home' orderdetailspdt.product.productid %}"><img class="product-display" src="{{ orderdetailspdt.product.picture.url }}" alt="error" style="width:70%; margin: 0% 0% 0% 10%;"></a>
                         </div>
                         <div class="col-lg-5" style="text-align: left; margin: 5% 0% 0% -5%;">
                             
