--- a/ecommerce/templates/base2.html
+++ b/ecommerce/templates/base2.html
@@ -15,8 +15,8 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Ecom</a>
+    <nav class="navbar navbar-expand-lg" style="background-color: #485e79;">
+        <a class="navbar-brand" href="{% url 'homepage:home' %}"> <h1 style="font-family: comicsans; color: white;" >SHOPオンライン</h1></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Store <span class="sr-only">(current)</span></a>
+                    
                 </li>
 
             </ul>
