--- a/ecommerce/templates/landing/homepage.html
+++ b/ecommerce/templates/landing/homepage.html
@@ -99,6 +99,10 @@ Homepage
 <div class="container">
 {% block body %}
 
+
+
+        
+
         <br>
         <h1 id="top-section" style="align-items: center;  color: #485e79;"> Welcome , {{user.username}}!!</h1> 
         <br>
@@ -136,6 +140,31 @@ Homepage
             </div>
         </form>
 
+        {% if slideimgs %}
+        <br>
+
+        <hr>
+        <h1 style="text-align: center;"> SALE ! </h1>
+        <br>
+        <div class="container sliderimg" style="background-color: rgb(243, 241, 241);">
+                <div class="row" >
+                    <div class="col-lg-1">
+                        <button class="btn btn-outline-secondary" onclick="plusDivs(-1)" style="height:80%; margin-top: 70px; ">&#10094;</button>
+                    </div>
+                    <div class="col-lg-10">
+                        {% for imgs in slideimgs %}                
+                            <a href="{% url 'products:home' imgs.productid %}"><img class="mySlides" src="{{imgs.picture.url}}" style="height: 600px; max-height:700px;; width: 100%; margin: 5% 0%; border-radius: 20px;"></a>
+                        {% endfor %}                        
+                    </div>
+                    <div class="col-lg-1">
+                        <button class="btn btn-outline-secondary" onclick="plusDivs(+1)" style="height:80%; margin-top: 70px; float: right;">&#10095;</button>
+                    </div>
+                </div>
+        </div>
+
+        <hr>
+
+        {% endif %}
 
         <br><br>
         <div class="pagenumber">
@@ -183,5 +212,37 @@ Homepage
                 <br><br><br><br>
             {% endfor %}
         </div>
+
+        <script>
+            var intervalID = window.setInterval(myCallback, 5000);
+            function myCallback() {
+                plusDivs(+1);
+            }
+
+
+            var slideIndex = 1;
+            showDivs(slideIndex);
+
+            function plusDivs(n) {
+            showDivs(slideIndex += n);
+            }
+
+            function showDivs(n) {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            if (n > x.length) {slideIndex = 1}
+            if (n < 1) {slideIndex = x.length} ;
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            x[slideIndex-1].style.display = "block";
+            }
+
+            
+        </script>
+
+
+
+
 {% endblock %}
 </div>
