--- a/ecommerce/templates/cart/cart.html
+++ b/ecommerce/templates/cart/cart.html
@@ -216,10 +216,10 @@ Product-Home
                                 <img class="thumbnail" src={{rpdt.picture.url}}>
                                 <div class="box-element product">
                                     <h6><strong>Product : {{rpdt.productname}} - {{rpdt.created_at}}</strong></h6>
-                                    <hr>
+                                    <hr></a>
         
-                                    <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                                    <a class="btn btn-outline-success" href="#">View</a>
+                                    <a href="{% url 'products:addtocart' rpdt.productid %}"><button  class="btn btn-outline-secondary add-btn">Add to Cart</button></a>
+                                    <a class="btn btn-outline-success" href="{% url 'products:home' rpdt.productid %}">View</a>
                                     <h4 style="display: inline-block; float: right"><strong>₹{{rpdt.unit_price}}</strong></h4>
         
                                 </div>
