--- a/ecommerce/templates/landing/end.html
+++ b/ecommerce/templates/landing/end.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="container" style="color: white; text-align: center;">
         <br><br>
-        <a href="#top-section"><button class="btn btn-light"> MOVE TO TOP </button></a>
+        <a href="#top-section"><button class="btn btn-light" style="border: 0.5px solid #ffbb33;"> MOVE TO TOP </button></a>
         <br><br>
     </div>
 </div>
@@ -12,40 +12,40 @@
         
             <div class="col-lg-3">
                 <div class="container">
-                    <h1>Get to Know us</h1><br>
-                    <h4>Careers</h4><br>
-                    <h4>About Shoppingオンライン</h4><br>
-                    <h4>Global Community</h4><br>
+                    <a href="#"><h1 class="bottom-font">Get to Know us</h1></a><br>
+                    <a href="#"><h4 class="bottom-font">Careers</h4><br></a>
+                    <a href="#"><h4 class="bottom-font">About Shoppingオンライン</h4><br></a>
+                    <a href="#"><h4 class="bottom-font">Global Community</h4><br></a>
                 </div>
                 
             </div>
 
             <div class="col-lg-3">
                 <div class="container">
-                    <h1>Get to Know us</h1><br>
-                    <h4>Careers</h4><br>
-                    <h4>About Shoppingオンライン</h4><br>
-                    <h4>Global Community</h4><br>
+                    <h1 class="bottom-font">Get to Know us</h1><br>
+                    <h4 class="bottom-font">Careers</h4><br>
+                    <h4 class="bottom-font"> About Shoppingオンライン</h4><br>
+                    <h4 class="bottom-font">Global Community</h4><br>
                 </div>
                 
             </div>
 
             <div class="col-lg-3">
                 <div class="container">
-                    <h1>Get to Know us</h1><br>
-                    <h4>Careers</h4><br>
-                    <h4>About Shoppingオンライン</h4><br>
-                    <h4>Global Community</h4><br>
+                    <h1 class="bottom-font">Get to Know us</h1><br>
+                    <h4 class="bottom-font">Careers</h4><br>
+                    <h4 class="bottom-font">About Shoppingオンライン</h4><br>
+                    <h4 class="bottom-font">Global Community</h4><br>
                 </div>
                 
             </div>
 
             <div class="col-lg-3">
                 <div class="container">
-                    <h1>Get to Know us</h1><br>
-                    <h4>Careers</h4><br>
-                    <h4>About Shoppingオンライン</h4><br>
-                    <h4>Global Community</h4><br>
+                    <h1 class="bottom-font">Get to Know us</h1><br>
+                    <h4 class="bottom-font">Careers</h4><br>
+                    <h4 class="bottom-font">About Shoppingオンライン</h4><br>
+                    <h4 class="bottom-font">Global Community</h4><br>
                 </div>
                 
             </div>
