--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -19,7 +19,7 @@
 
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=374963193096702&autoLogAppEvents=1" nonce="sgZovSfw"></script>
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
         <nav class="navbar navbar-expand-lg" style="background-color: #485e79;">
@@ -34,7 +34,7 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
                     {% if request.user.id == 1 %}
-                        <a class="nav-link" href="{% url 'products:addproduct' %}" > <button class="btn btn-primary" style="background-color: white; color: black;"> ADD PRODUCT </button>  <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{% url 'products:addproduct' %}" > <button class="btn btn-primary" style="background-color: white; color: black; border: 0.1px solid #ffbb33"> ADD PRODUCT </button>  <span class="sr-only">(current)</span></a>
                     {% endif %}
                 </li>
 
@@ -87,15 +87,28 @@
         <div class="col-md-2" style="border: 2px solid black;  min-height: 1350px;">
             {% block rightnav %}
 
+                
 
             {% endblock rightnav %}
+            {% if request.session.current_pdt_id %}
+                <br>
+                <hr>
+                <br>
+                {% include 'nav content/rightnav/rightnav_recentproduct.html' %}
+                <br><hr>
+            {% endif %}
         </div>
     </div>
 
     <br><br>
             <div style="background-color: #232F3E; height: 100%;">
+                <br>
+                <hr style="border-color: #ffbb33; border-width: 8px;">
                 {% include 'landing/end.html' %}
+                <hr style="border-color: #ffbb33; border-width: 8px;">
+                <br>
             </div>
+                
     
     
     
