--- a/ecommerce/templates/orders/myorders.html
+++ b/ecommerce/templates/orders/myorders.html
@@ -66,7 +66,7 @@ Product-Home
             <br>
             <h4>Total items : {{cart_count}}</h4> <br>
             <h4>Total cost : {{totalcost}}</h4><br><br>
-            <button class="btn btn-success" style="width: 100%;">Place Order</button>
+            <a href="{% url 'orders:createorder' %}"><button class="btn btn-success" style="width: 100%;">Place Order</button></a>
         </div>
         
 
