--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -58,7 +58,7 @@
                 <a href="{% url 'cart:home' %}">
                     <img id="cart-icon" src="{% static 'img/cart.png' %}">
                 </a>
-                <p id="cart-total" style="background-color: red; ">{{cart_count}}</p>
+                <p id="cart-total" style="background-color: red; border-radius: 22px; ">{{cart_count}}</p>
                 <!-- <p id="cart-total">0</p> -->
                 
 
