--- a/ecommerce/templates/cart/cart.html
+++ b/ecommerce/templates/cart/cart.html
@@ -11,7 +11,7 @@ Product-Home
 
 {% block leftnav %}
 
-    <div class="right-nav">
+    <div class="left-nav">
         <hr>
         <h1> Categories : </h1><br>
 
@@ -51,8 +51,6 @@ Product-Home
             
         </ul>
     </div>
-
-
 {% endblock %}
 
 
@@ -65,7 +63,7 @@ Product-Home
             <h3> <u> ORDER SUMMARY : </u> </h3>
             <br>
             <h4>Total items : {{cart_count}}</h4> <br>
-            <h4>Total cost : {{totalcost}}</h4><br><br>
+            <h4>Total cost : ₹ {{totalcost}}</h4><br><br>
             <a href="{% url 'orders:createorder' %}"><button class="btn btn-success" style="width: 100%;">Place Order</button></a>
         </div>
         
@@ -199,6 +197,19 @@ Product-Home
                     <hr>
                     <br><br>
                 {%endif%}
+                <hr>
+                <br>
+                <div class="jumbotron" style="border: 2px solid black;">
+                    <h2>ORDER SUMMARY : </h2>
+                    <br>
+                    <h4>TOTAL ITEMS : {{cart_count}}</h4>
+                    <br>
+                    <h4>TOTAL ITEMS : {{totalcost}}</h4>
+                    <br>
+                    <h5>Order is estimated to ship in 7 days from now!</h5>  
+                </div>
+                <hr>
+                <br>
                 <a href="{% url 'homepage:home' %}"><button class="btn btn-primary" style="width: 80%; margin: 0 10%;"> CONTINUE SHOPPING </button><br><br></a>
                 <a href="{% url 'orders:createorder' %}"><button class="btn btn-success" style="width: 80%; margin: 0 10%;"> PLACE ORDER </button><br></a>
                 <br>
@@ -226,14 +237,11 @@ Product-Home
                             </div>
                         </a>
                         <br> 
-                        <br><br>
                     {% endfor %}
                 </div>
             <br>
             </div>
             <hr>
-
-            <br><br>
             
 
 
