--- a/ecommerce/templates/landing/homepage.html
+++ b/ecommerce/templates/landing/homepage.html
@@ -148,16 +148,16 @@ Homepage
         <br>
         <div class="container sliderimg" style="background-color: rgb(243, 241, 241);">
                 <div class="row" >
-                    <div class="col-lg-1">
-                        <button class="btn btn-outline-secondary" onclick="plusDivs(-1)" style="height:80%; margin-top: 70px; ">&#10094;</button>
+                    <div class="col-lg-2">
+                        <button class="btn btn-outline-secondary sale-button" onclick="plusDivs(-1)" style="height:80%; margin-top: 70px; ">&#10094;</button>
                     </div>
-                    <div class="col-lg-10">
+                    <div class="col-lg-8">
                         {% for imgs in slideimgs %}                
                             <a href="{% url 'products:home' imgs.productid %}"><img class="mySlides" src="{{imgs.picture.url}}" style="height: 600px; max-height:700px;; width: 100%; margin: 5% 0%; border-radius: 20px;"></a>
                         {% endfor %}                        
                     </div>
-                    <div class="col-lg-1">
-                        <button class="btn btn-outline-secondary" onclick="plusDivs(+1)" style="height:80%; margin-top: 70px; float: right;">&#10095;</button>
+                    <div class="col-lg-2">
+                        <button class="btn btn-outline-secondary sale-button" onclick="plusDivs(+1)" style="height:80%; margin-top: 70px; float: right;">&#10095;</button>
                     </div>
                 </div>
         </div>
@@ -169,9 +169,9 @@ Homepage
         <br><br>
         <div class="pagenumber">
             <div class="row">
-                <div class="col-md-4"  style="text-align: right;">
+                <div class="col-md-4 paginatorleftarrow"  style="text-align: right;">
                     {% if product.has_previous %}
-                        <a href="{% url 'homepage:home' %}?page={{product.previous_page_number }}"> <b style="text-align: right; color: #485e79; text-decoration: none;"><</b> </a>
+                        <a href="{% url 'homepage:home' %}?page={{product.previous_page_number }}"> <b style="text-align: right; color: #485e79;"><--</b> </a>
                     {%endif%}
                 </div>
 
@@ -179,9 +179,9 @@ Homepage
                     <p style="text-align: center;">Showing Page : {{product.number}} / {{pgcount}} ({{per_page}} results)</p>
                 </div>
         
-                <div class="col-md-4"  style="text-align: left; text-decoration: none; color: #485e79;">
+                <div class="col-md-4 paginatorrightarrow"  style="text-align: left;">
                     {% if product.has_next %}
-                        <a href="{% url 'homepage:home' %}?page={{product.next_page_number}}"> <b>></b> </a>
+                        <a href="{% url 'homepage:home' %}?page={{product.next_page_number}}"> <b style="text-align: left; color: #485e79;">--></b> </a>
                     {%endif%}
                 </div>
         
