before starting vb work

--- a/ecommerce/templates/landing/homepage.html
+++ b/ecommerce/templates/landing/homepage.html
@@ -60,11 +60,28 @@ Homepage
 
     <div class="right-nav">
         <hr>
-        <h1> This comes from template betsu </h1>
+        
+        <h4>TEST RIGHT NAV CONTENT</h4>
 
-        <br><br><br><br>
+        <br><br>
+        
+        <a href="#"><h3 style="color: black;"><i class="fas fa-address-book"> contact us </i></h3></a> <br>
+        <a href="#"><h3 style="color: black;"><i class="fas fa-question"> FAQ </i></h3></a> <br>
+        <a href="#"><h3 style="color: black;"><i class="fas fa-handshake"> About us </i></h3></a><br>
+        <a href="#"><h3 style="color: black;"><i class="fas fa-copyright"> Policies </i></h3></a>
+        <br><br>
 
-        <h1>test title</h1>
+        <h1>Our Partners</h1> <br>
+
+        <div class="row">
+            <div class="col-lg-5">
+                <img style="width: 100px; height : 120px" src="{% static 'partners/adidas.jpg' %}" alt="not available">
+            </div>
+
+            <div class="col-lg-5">
+                <img style="width: 100px; height : 120px" src="{% static 'partners/nike.png' %}" alt="not available">
+            </div>
+        </div>
 
         <br><br><br>
 
