--- a/ecommerce/templates/landing/homepage.html
+++ b/ecommerce/templates/landing/homepage.html
@@ -70,21 +70,54 @@ Homepage
         <a href="#"><h3 style="color: black;"><i class="fas fa-handshake"> About us </i></h3></a><br>
         <a href="#"><h3 style="color: black;"><i class="fas fa-copyright"> Policies </i></h3></a>
         <br><br>
+        
+        <hr>
+        <br>
 
-        <h1>Our Partners</h1> <br>
+        <h1>Our Partners : </h1> <br>
 
         <div class="row">
-            <div class="col-lg-5">
-                <img style="width: 100px; height : 120px" src="{% static 'partners/adidas.jpg' %}" alt="not available">
+            <div class="col-lg-4" style="margin : 1px; margin-top: 20px;">
+                <a href="https://shop.adidas.jp/" target="_blank"><img style="width: 150px; height : 120px; border: 1px solid black;" src="{% static 'partners/adidas.jpg' %}" alt="not available"></a>
             </div>
 
-            <div class="col-lg-5">
-                <img style="width: 100px; height : 120px" src="{% static 'partners/nike.png' %}" alt="not available">
+            <div class="col-md-2">
+            </div>
+
+            <div class="col-lg-4" style="margin : 1px; margin-top: 20px;">
+                <a href="https://www.nike.com/jp/" target="_blank"><img style="width: 150px; height : 120px; border: 1px solid black;" src="{% static 'partners/nike.png' %}" alt="not available"></a>
             </div>
         </div>
 
-        <br><br><br>
+        <div class="row">
+            <div class="col-lg-4" style="margin : 1px; margin-top: 20px;">
+                <a href="https://www.calvinklein.com/jp/en/home" target="_blank"><img style="width: 150px; height : 120px; border: 1px solid black;" src="{% static 'partners/calvinklein.svg.png' %}" alt="not available"></a>
+            </div>
 
+            <div class="col-md-2">
+            </div>
+
+            <div class="col-lg-4" style="margin : 1px; margin-top: 20px;">
+                <a href="https://jp.louisvuitton.com/jpn-jp/homepage" target="_blank"><img style="width: 150px; height : 120px; border: 1px solid black;" src="{% static 'partners/luisvuitton.svg.png' %}" alt="not available"></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4" style="margin : 1px; margin-top: 20px;">
+                <a href="https://www.underarmour.co.jp/ja-jp/" target="_blank"><img style="width: 150px; height : 120px; border: 1px solid black;" src="{% static 'partners/underarmour.svg.png' %}" alt="not available"></a>
+            </div>
+
+            <div class="col-md-2">
+            </div>
+
+            <div class="col-lg-4" style="margin : 1px; margin-top: 20px;" >
+                <a href="https://www.nike.com/jp/" target="_blank"><img style="width: 150px; height : 120px; border: 1px solid black;" src="{% static 'partners/nike.png' %}" alt="not available"></a>
+            </div>
+        </div>
+
+        <br><br>
+
+        <hr>
+        <br>
         <ul>
             <a href=""><li>click here</li></a>
             <a href=""><li>click here</li></a>
