--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -56,11 +56,19 @@
                     <a href="{% url 'registration:signup' %}" class="btn btn-warning">Signup</a>
                 {% endif %}
 
-                <a href="{% url 'cart:home' %}">
-                    <img id="cart-icon" src="{% static 'img/cart.png' %}">
-                </a>
-                <p id="cart-total" style="background-color: red; border-radius: 22px; ">{{cart_count}}</p>
-                <!-- <p id="cart-total">0</p> -->
+                {% if user.is_authenticated %}
+                    <a href="{% url 'cart:home' %}">
+                        <img id="cart-icon" src="{% static 'img/cart.png' %}">
+                    </a>
+                    <p id="cart-total" style="background-color: red; border-radius: 22px; ">{{cart_count}}</p>
+                    <!-- <p id="cart-total">0</p> -->
+                {% else %}
+                    <a href="#" onclick = "return confirm('Please signin to continue !') ">
+                        <img id="cart-icon" src="{% static 'img/cart.png' %}">
+                    </a>
+                    <p id="cart-total" style="background-color: red; border-radius: 22px; ">{{cart_count}}</p>
+                    <!-- <p id="cart-total">0</p> -->
+                {% endif %}
                 
 
             </div>
